# alfresco

./: .gitignore  COPYING  ChangeLog  Doxyfile  FCS Change Log.rtf  INSTALL  Makefile  Makefile.am  README  README.md  UsersGuide.html  configure.ac  index.html  validateFIF.pl
Client/: .cdtbuild  .cdtproject  .project  Client.sln  Client.vcproj  Makefile  PostBuild.bat
Client/Setup/: Setup.vdproj
Client/include/Fresco/Client/: Client.h  FrescoEngine.h  Messenger.h  RemoteNotification.h  demon_me.h
Client/install/: ReadMe.txt  deploy  install.ver  mktar  package  unpackage.ver
Client/scripts/: startclient  startclient-OSX  stopclient
Client/source/: Client.cpp  FrescoEngine.cpp  Global.cpp  Main.cpp  Messenger.cpp  RemoteNotification.cpp  demon_me.cpp
Client/src/: Client.cpp  FrescoEngine.cpp  Global.cpp  Messenger.cpp  RemoteNotification.cpp
Custom/: .cdtbuild  .project  Custom.aps  Custom.sln  Custom.vcproj  Makefile
Custom/include/Fresco/Custom/: BSpruce.h  Custom.h  CustomFresco.h  CustomLandscape.h  Decid.h  Grassland.h  Tundra.h  WSpruce.h
Custom/source/: BSpruce.cpp  CustomFresco.cpp  CustomLandscape.cpp  Decid.cpp  Tundra.cpp  WSpruce.cpp
Custom/src/: BSpruce.cpp  CustomFresco.cpp  CustomLandscape.cpp  Decid.cpp  Grassland.cpp  Tundra.cpp  WSpruce.cpp
Deprecated/Runs/Demo/: demo-UsingCluster.fif
Deprecated/Runs/TestCases/: HabitStatAgeRangeNot2Ints.fif  HabitStatAgeRangeNotInOrder.fif  SuppTranFailOnButEmpty.fif  SuppTranPass.fif  SuppTranPassOffAndEmpty.fif
Deprecated/Runs/TestCases/FIF/: SuppTranFailMissCount.fif  SuppTranFailNoMap0.fif  SuppTranFailNoMap2.fif  SuppTranFailNoZero.fif
Deprecated/Runs/TestCases/Input/: Site.txt  Veg.txt
Foundation/: .cdtbuild  .project  Foundation.sln  Foundation.vcproj  Makefile
Foundation/include/Fresco/Foundation/: Climate.h  Fire.h  Frame.h  Fresco.h  Interface.h  Landscape.h  NoVeg.h  PreCompiled.h  RasterIO.h  ReadRasterException.h  Resource.h  Species.h  Stat.h  WriteRasterException.h
Foundation/source/: Climate.cpp  Fire.cpp  Frame.cpp  Fresco.cpp  Interface.cpp  InterfaceB.cpp  Landscape.cpp  NoVeg.cpp  PreCompiled.cpp  Stat.cpp
Foundation/src/: Climate.cpp  Except.cpp  Fire.cpp  Frame.cpp  Fresco.cpp  Interface.cpp  Landscape.cpp  PreCompiled.cpp  RasterIO.cpp  ReadRasterException.cpp  Species.cpp  Stat.cpp  WriteRasterException.cpp
Runs/Demo/: FIF Changes For v1.0.txt  demo-MonthlyClimate-RunningLocal.fif  demo-RunningLocal.fif  demo-UsingCluster.fif
Runs/Demo/FIF/: demo-MonthlyClimate-RunningLocal.fif
Runs/Demo/Input/Climate/: ExplicitPrecip_106.txt  ExplicitPrecip_108.txt  ExplicitPrecip_109.txt  ExplicitPrecip_11.txt  ExplicitPrecip_117.txt  ExplicitPrecip_122.txt  ExplicitPrecip_124.txt  ExplicitPrecip_130.txt  ExplicitPrecip_131.txt  ExplicitPrecip_23.txt  ExplicitPrecip_30.txt  ExplicitPrecip_34.txt  ExplicitPrecip_41.txt  ExplicitPrecip_46.txt  ExplicitPrecip_51.txt  ExplicitPrecip_52.txt  ExplicitPrecip_60.txt  ExplicitPrecip_61.txt  ExplicitPrecip_71.txt  ExplicitPrecip_72.txt  ExplicitPrecip_74.txt  ExplicitPrecip_77.txt  ExplicitPrecip_81.txt  (+40 more)
Runs/Demo/JSON/: Alfresco.JSON
Runs/TestCases/: HabitStatAgeRangeNotInts.fif  HabitStatFailVegTypesBadID.fif  HabitStatPass-CLUSTER.fif  SuppTranFailNoZero.fif
Runs/TestCases/FIF/: HabitStatAgeRangeNoKey.fif  HabitStatFailVegTypesEmpty.fif  HabitStatFailVegTypesNoKey.fif  HabitStatPass.fif
Runs/TestCases/Input/: Age.txt  Density.txt
Server/: BasicStatistic.cs  Client.cs  ClientList.cs  ClientListViewItem.cs  ClientLog.cs  ClientLogViewer.Designer.cs  ClientLogViewer.cs  ClientMonitor.Designer.cs  ClientMonitor.cs  ClientMonitor.resx  Editor.cs  Editor.designer.cs  EditorFIF.cs  EditorFIF.designer.cs  EditorFIF.resx  Events.cs  FIF.cs  FRESCO Server.csproj  FRESCO Server.sln  FileHandler.cs  FileListView.cs  FileListView.designer.cs  FileListView.resx  FireSizeStatistic.cs  FormFRESCO.cs  FormFRESCO.designer.cs  Global.cs  Messenger.cs  PostBuild.bat  RemoteProcedureCall.cs  RpcStream.cs  SafeInvokeHelper.cs  Server.cs  Server.designer.cs  Server.resx  Statistic.cs  Viewer.cs  Viewer.designer.cs  ViewerProgress.cs  ViewerProgress.designer.cs  (+3 more)
Server/Controls/: UafListView.cs
Server/Docs/: ClusterCoordination.howto  ConvertingFIFs.howto  FCS Versions.doc  LinuxCommands.howto
Server/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings  licenses.licx  vssver.scc
Server/Properties/DataSources/: ClientList.datasource  vssver.scc
Server/Resources/: Thumbs.db  vssver.scc
Server/SSHSession/: SshSession.vcproj
Server/SSHSession/source/: main.cpp
Server/Setup/: Setup.sln  Setup.vdproj  mssccprj.scc  vssver.scc
Server/Test/: TestStatistic.cs
docs/: BurnSeverity.md  ChangeLog.md  HistoricalFires.md  JSONConfig.md  References.md  UsersGuide.html
examples/: README  alfresco.json  alfresco.slurm
include/: Args.h  BSpruce.h  BarrenLichenMoss.h  Client.h  Climate.h  CustomFresco.h  CustomLandscape.h  Decid.h  Except.h  FIF.h  Fire.h  Frame.h  Fresco.h  FrescoClimate.h  FrescoEngine.h  Global.h  GraminoidTundra.h  GrammanoidTundra.h  Grassland.h  Interface.h  Landscape.h  NoVeg.h  PreCompiled.h  RasterIO.h  ReadRasterException.h  RemoteNotification.h  Server.h  ShrubTundra.h  Species.h  StatArray.h  StatFile.h  TemperateRainforest.h  Tundra.h  WSpruce.h  WetlandTundra.h  WriteRasterException.h
lib/: Makefile.am  testsvncommit
mpi/: Makefile.am
sha1sums/: README.md
src/: Args.cpp  BSpruce.cpp  BarrenLichenMoss.cpp  Client.cpp  Climate.cpp  CoastalRainforest.cpp  CustomFresco.cpp  CustomLandscape.cpp  Decid.cpp  Except.cpp  FIF.cpp  Fire.cpp  Frame.cpp  Fresco.cpp  FrescoClimate.cpp  FrescoEngine.cpp  Global.cpp  GraminoidTundra.cpp  GrammanoidTundra.cpp  Grassland.cpp  Interface.cpp  Landscape.cpp  Main.cpp  MainCLI.cpp  Makefile.am  Messenger.cpp  NoVeg.cpp  PreCompiled.cpp  RasterIO.cpp  RemoteNotification.cpp  ShrubTundra.cpp  Species.cpp  Stat.cpp  StatArray.cpp  StatFile.cpp  TemperateRainforest.cpp  Tundra.cpp  WSpruce.cpp  WetlandTundra.cpp
(+240 files in other folders)
