AC_INIT([Fresco], [0.1], [apbennett@alaska.edu], [fresco], [http://www.snap.uaf.edu/])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.11.1 no-define])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_SRCDIR(src/)
AC_PROG_CXX
#AC_CONFIG_FILES([Makefile])
AC_OUTPUT

AC_PROG_LIBTOOL
AC_OUTPUT(Makefile mpi/Makefile src/Makefile)
